# uzbekistan-weather

./: .gitignore  README.md  pyproject.toml  setup.py
uzbekistanweather/: __init__.py  weather.py
