[tool.poetry]
name = "uzbekistanweather"
version = "0.1.4"  # Increment this version number
description = "A short description of your package"
authors = ["Your Name <farmonovsino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"  # Specify your Python version and any other dependencies

[tool.poetry.dev-dependencies]
pytest = "^6.2"  # Specify any development dependencies

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
